--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ H1{
 	font-size: 42px;
 	line-height: 120%;
 	letter-spacing: -0.02em;
+	text-transform: none;
 }
 a{
 	text-decoration: none;
@@ -80,28 +81,7 @@ dialog>.menu{
 	width: calc(100% - 64px);
 }
 dialog>img{
-	height: 100%;
 	margin: auto;
-}
-.headline{
-	display: flex;
-	gap: 24px;
-	flex-direction: row;
-	justify-content: center;
-}
-.headline>p{
-	display: inline;
-}
-.products{
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	gap: 24px;
-}
-.card{
-	padding: 20px;
-	background: var(--primary-color-grey);
-	border-radius: 6px;
-	position: relative;
 }
 .banner{
 	background: url('./static/BANNER.jpg');
@@ -117,13 +97,46 @@ dialog>img{
 	flex-direction: column;
 	justify-content: space-between;
 }
+.bannerButton{
+	display: flex;
+	justify-content: center;
+}
 .bannerButton>button{
 	padding: 12px 48px;
 	background: var(--primary-white);
 	border-radius: 6px;
 	border: 0;
 	cursor: pointer;
+	display: flex;
+	gap: 8px;
+	align-items: center;
+}
+.bannerButton>button>span{
+	font-size: 11px;
+	height: 11px;
+}
+.headline{
+	display: flex;
+	gap: 24px;
+	flex-direction: row;
+	justify-content: center;
+}
+.headline>*{
+	text-align: center;
+}
+.headline>p{
 	display: inline;
+}
+.products{
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 24px;
+}
+.card{
+	padding: 20px;
+	background: var(--primary-color-grey);
+	border-radius: 6px;
+	position: relative;
 }
 .card>.favorite{
 	height: 24px;
@@ -138,11 +151,16 @@ dialog>img{
 .close{
 	display: flex;
 	flex-direction: row;
+	align-items: center;
 	gap: 8px;
 	outline: none;
 	background: transparent;
 	border: none;
 	cursor: pointer;
+}
+.close>span{
+	font-size: 13px;
+	height: 13px;
 }
 .tag{
 	position: absolute;
@@ -158,11 +176,27 @@ dialog>img{
 	background: var(--label-limited-edition);
 }
 @media only screen and (max-width: 600px){
-	.large{
-		font-size: 18px;
+	dialog{
+		height: 420px;
+		width: 312px;
+		padding: 16px;
+	}
+	dialog>.menu{
+		width: calc(100% - 32px);
 	}
 	H1{
 		font-size: 32px;
+	}
+	body{
+		padding: 0 16px;
+	}
+	.headline{
+		gap: 16px;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.large{
+		font-size: 18px;
 	}
 	.hideOnMobile{
 		display: none;
@@ -175,9 +209,6 @@ dialog>img{
 		grid-column-end: 3;
 		grid-row-start: 3;
 		height: 498px;
-	}
-	body{
-		padding: 0 16px;
 	}
 	.banner{
 		padding: 32px 24px;
